fixes when dockmanager is not full size and a few type fixes

--- a/lib/css/dock-manager.css
+++ b/lib/css/dock-manager.css
@@ -138,9 +138,11 @@
 /**************************** Splitter *********************************/
 .splitter-container-horizontal {
 	float:left;
+	position: relative;
 }
 
 .splitter-container-vertical {
+	position: relative;
 }
 
 .splitbar-horizontal {
