--- a/lib/css/dock-manager.css
+++ b/lib/css/dock-manager.css
@@ -1,52 +1,70 @@
-
 /************* Panel with title bar ************/
-.panel-base {
+
+.panel-base {}
+
+.panel-base:focus {
+	outline: 0;
 }
 
 .panel-titlebar {
 	width: 100%;
-        overflow: hidden;
-        height: 25px;
+	overflow: hidden;
+	height: 25px;
+}
+
+.panel-titlebar-icon {
+	height: 16px;
+	margin-right: 3px;
 }
 
 .panel-titlebar-text {
 	float: left;
-	padding-left:10px;
-	padding-top:5px;
+	padding-left: 10px;
+	padding-top: 5px;
 	text-overflow: ellipsis;
-    overflow: hidden;
-    width: calc(100% - 30px);
-    white-space: nowrap;
+	overflow: hidden;
+	width: calc(100% - 30px);
+	white-space: nowrap;
+	display: flex;
 }
 
 .panel-titlebar-button-close {
+	font-weight: bold;
+}
+
+.panel-titlebar-button-close::after {
 	float: right;
-	padding-top:5px;
-	padding-right:8px;
+	cursor: pointer;
+	padding-top: 5px;
+	padding-right: 8px;
+	content: 'X';
 }
 
 .panel-titlebar-button-close:hover {
-        cursor: pointer;
-        float: right;
-	padding-top:5px;
-	padding-right:8px;
+	color: black;
 }
 
 .panel-content {
 	width: 100%;
-    overflow: hidden;
+	overflow: hidden;
 }
 
 .panel-content * {
-        /* margin: 0px; */
+	/* margin: 0px; */
 }
 
 /***************** Floating dialog box ****************/
+
 .dialog-floating {
 	position: absolute;
 }
 
+.dialog-floating:focus {
+	outline: 0;
+}
+
 /************ Resize decorator ************/
+
 .resize-handle {
 	position: absolute;
 	width: 6px;
@@ -59,38 +77,60 @@
 	height: 12px;
 }
 
-.resize-handle-e { cursor: e-resize; }
-.resize-handle-w { cursor: w-resize; }
-.resize-handle-s { cursor: s-resize; }
-.resize-handle-n { cursor: n-resize; }
-.resize-handle-ne { cursor: ne-resize; }
-.resize-handle-nw { cursor: nw-resize; }
-.resize-handle-se { cursor: se-resize; }
-.resize-handle-sw { cursor: sw-resize; }
+.resize-handle-e {
+	cursor: e-resize;
+}
 
+.resize-handle-w {
+	cursor: w-resize;
+}
+
+.resize-handle-s {
+	cursor: s-resize;
+}
+
+.resize-handle-n {
+	cursor: n-resize;
+}
+
+.resize-handle-ne {
+	cursor: ne-resize;
+}
+
+.resize-handle-nw {
+	cursor: nw-resize;
+}
+
+.resize-handle-se {
+	cursor: se-resize;
+}
+
+.resize-handle-sw {
+	cursor: sw-resize;
+}
 
 /******************* Dock Manager ********************/
+
 .dock-container {
-    position: relative;
+	position: relative;
 }
 
-.dock-container-fill {
-}
+.dock-container-fill {}
 
 /******************* Document Manager ********************/
-.document-manager {
-}
 
+.document-manager {}
 
 /******************* Dock Wheel ********************/
+
 .dock-wheel-base {
 	position: absolute;
 }
 
 .dock-wheel-item {
 	position: absolute;
-	width:32px;
-	height:32px;
+	width: 32px;
+	height: 32px;
 }
 
 .dock-wheel-fill {
@@ -120,24 +160,53 @@
 
 .dock-wheel-panel-preview {
 	position: absolute;
-	background-color:rgba(128, 128, 255, 0.5);
+	background-color: rgba(128, 128, 255, 0.5);
 }
 
-.dock-wheel-fill-icon { background:url(../images/dock_fill.png) 0 0; }
-.dock-wheel-left-icon { background:url(../images/dock_left.png) 0 0; }
-.dock-wheel-right-icon { background:url(../images/dock_right.png) 0 0; }
-.dock-wheel-top-icon { background:url(../images/dock_top.png) 0 0; }
-.dock-wheel-down-icon { background:url(../images/dock_bottom.png) 0 0; }
+.dock-wheel-fill-icon {
+	background: url(../images/dock_fill.png) 0 0;
+}
 
-.dock-wheel-fill-icon-hover { background:url(../images/dock_fill_sel.png) 0 0; }
-.dock-wheel-left-icon-hover { background:url(../images/dock_left_sel.png) 0 0; }
-.dock-wheel-right-icon-hover { background:url(../images/dock_right_sel.png) 0 0; }
-.dock-wheel-top-icon-hover { background:url(../images/dock_top_sel.png) 0 0; }
-.dock-wheel-down-icon-hover { background:url(../images/dock_bottom_sel.png) 0 0; }
+.dock-wheel-left-icon {
+	background: url(../images/dock_left.png) 0 0;
+}
+
+.dock-wheel-right-icon {
+	background: url(../images/dock_right.png) 0 0;
+}
+
+.dock-wheel-top-icon {
+	background: url(../images/dock_top.png) 0 0;
+}
+
+.dock-wheel-down-icon {
+	background: url(../images/dock_bottom.png) 0 0;
+}
+
+.dock-wheel-fill-icon-hover {
+	background: url(../images/dock_fill_sel.png) 0 0;
+}
+
+.dock-wheel-left-icon-hover {
+	background: url(../images/dock_left_sel.png) 0 0;
+}
+
+.dock-wheel-right-icon-hover {
+	background: url(../images/dock_right_sel.png) 0 0;
+}
+
+.dock-wheel-top-icon-hover {
+	background: url(../images/dock_top_sel.png) 0 0;
+}
+
+.dock-wheel-down-icon-hover {
+	background: url(../images/dock_bottom_sel.png) 0 0;
+}
 
 /**************************** Splitter *********************************/
+
 .splitter-container-horizontal {
-	float:left;
+	float: left;
 	position: relative;
 }
 
@@ -146,44 +215,43 @@
 }
 
 .splitbar-horizontal {
-	width:100%;
-	height:5px;
-	cursor:n-resize;
+	width: 100%;
+	height: 5px;
+	cursor: n-resize;
 	position: relative;
 }
 
 .splitbar-vertical {
-	width:5px;
-	height:100%;
-	float:left;
-	cursor:e-resize;
+	width: 5px;
+	height: 100%;
+	float: left;
+	cursor: e-resize;
 	position: relative;
 }
 
-.splitbar-horizontal-ghoust{
-	width:100%;
-	height:5px;
-	cursor:n-resize;
-	position:absolute;
-}
-.splitbar-vertical-ghoust {
-	width:5px;
-	height:100%;
-	position:absolute;
-	cursor:e-resize;
+.splitbar-horizontal-ghoust {
+	width: 100%;
+	height: 5px;
+	cursor: n-resize;
+	position: absolute;
 }
 
+.splitbar-vertical-ghoust {
+	width: 5px;
+	height: 100%;
+	position: absolute;
+	cursor: e-resize;
+}
 
 /*************************** Tab Host ********************************/
+
 .dockspan-tab-host {
 	display: inline-block;
 }
 
-.dockspan-tab-content {
-}
+.dockspan-tab-content {}
 
-.dockspan-tab-content * {
-}
+.dockspan-tab-content * {}
 
 .dockspan-tab-handle {
 	position: relative;
@@ -193,33 +261,41 @@
 	pointer: default;
 	padding-right: 16px;
 }
+
 .dockspan-tab-handle:hover {
-        cursor: pointer;
+	cursor: pointer;
 }
 
-.dockspan-tab-handle-selected {
-}
+.dockspan-tab-handle-selected {}
 
 .dockspan-tab-handle-text {
 	margin-top: 3px;
 	margin-left: 6px;
 	margin-right: 6px;
 	white-space: nowrap;
-    overflow: hidden;
+	overflow: hidden;
 	float: left;
 	text-overflow: ellipsis;
 	width: 100%;
+	display: flex;
 }
 
 .dockspan-tab-handle-close-button {
+	font-weight: bold;
+}
+
+.dockspan-tab-handle-close-button::after {
 	margin-top: 3px;
-	margin-right: 6px;
+	margin-right: 5px;
 	float: right;
 	position: absolute;
 	right: 0;
+	content: 'X';
+	cursor: pointer;
 }
 
 .dockspan-tab-handle-close-button:hover {
+	color: black;
 }
 
 .dockspan-tab-handle-list-container {
@@ -237,41 +313,40 @@
 	background-color: white;
 	border: white;
 	border: black solid 2px;
-    padding: 5px;
+	padding: 5px;
 }
 
-.dockspab-tab-handle-context-menu > div {
+.dockspab-tab-handle-context-menu>div {
 	cursor: pointer;
 	padding: 2px;
 }
 
-.dockspab-tab-handle-context-menu > div:hover {
+.dockspab-tab-handle-context-menu>div:hover {
 	background-color: gray;
 	cursor: pointer;
 	padding: 2px;
 }
 
 /*************************** Text Selection **************************/
+
 .disable-selection {
-        -moz-user-select: none;
-        -khtml-user-select: none;
-        -webkit-user-select: none;
-        user-select: none;
-        cursor: default;
+	-moz-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	user-select: none;
+	cursor: default;
 }
 
-
 /************************ Misc Utils *************************/
+
 .full-screen {
-	display:block;
-
-        /*set the div in the top-left corner of the screen*/
-        top:0;
-        left:0;
-
-        /*set the width and height to 100% of the screen*/
-        width:100%;
-        height:100%;
+	display: block;
+	/*set the div in the top-left corner of the screen*/
+	top: 0;
+	left: 0;
+	/*set the width and height to 100% of the screen*/
+	width: 100%;
+	height: 100%;
 }
 
 .rounded-corner-top {
