esc closing fixes

--- a/lib/css/dock-manager.css
+++ b/lib/css/dock-manager.css
@@ -258,6 +258,10 @@
 
 .dockspan-tab-content {}
 
+.dockspan-tab-content:focus {
+	outline: 0;
+}
+
 .dockspan-tab-content * {}
 
 .dockspan-tab-handle {
