no hover on selected

--- a/lib/css/dock-manager-style.css
+++ b/lib/css/dock-manager-style.css
@@ -121,6 +121,11 @@
 	color:#fff;
 }
 
+.dockspan-tab-handle-selected:hover {
+    background-color: #008749;
+	color:#fff;
+}
+
 .dockspan-tab-handle-text {
 }
 
