bugfix userselct none

--- a/lib/css/dock-manager.css
+++ b/lib/css/dock-manager.css
@@ -351,5 +351,8 @@
 
 .disable-selection {
 	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
 	cursor: default;
 }
