--- a/lib/css/dock-manager.css
+++ b/lib/css/dock-manager.css
@@ -78,12 +78,14 @@
 	position: absolute;
 	width: 6px;
 	height: 6px;
+	z-index: 10;
 }
 
 .resize-handle-corner {
 	position: absolute;
 	width: 12px;
 	height: 12px;
+	z-index: 10;
 }
 
 .resize-handle-e {
