fix position in docking css

--- a/lib/css/dock-manager.css
+++ b/lib/css/dock-manager.css
@@ -265,7 +265,9 @@
 	position: absolute;
 }
 
-.dockspan-tab-content {}
+.dockspan-tab-content {
+	position: relative;
+}
 
 .dockspan-tab-content:focus {
 	outline: 0;
