--- a/page/assets/dock-spawn.css
+++ b/page/assets/dock-spawn.css
@@ -2,7 +2,7 @@
 	display: block;
 	width: 440px;
 	height: 242px;
-	background: url('../../gallery/images/ide_0_gs.png') bottom;
+	/*background: url('../../gallery/images/ide_0_gs.png') bottom;*/
 	text-indent: -99999px;
 }
 .sample-ide-thumb:hover {
