Fixed up event bugs and added to demo to make it easier to see eventing and state changes

--- a/page/demo/ide/demo.css
+++ b/page/demo/ide/demo.css
@@ -80,7 +80,7 @@ body {
 	background-color: #ddd;
 }
 
-.problems-window {
+.state-window {
 	width: 300px;
 	height: 200px;
 	background-color: #edd;
