add grayout functionality for parent panel of a dialog

--- a/lib/css/dock-manager.css
+++ b/lib/css/dock-manager.css
@@ -66,6 +66,16 @@
 	/* margin: 0px; */
 }
 
+.panel-grayout {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: gray;
+	opacity: 0.8;
+}
+
 /***************** Floating dialog box ****************/
 
 .dialog-floating {
