--- a/lib/css/dock-manager.css
+++ b/lib/css/dock-manager.css
@@ -66,14 +66,19 @@
 	/* margin: 0px; */
 }
 
+.panel-content-wrapper {
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+
 .panel-grayout {
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: gray;
-	opacity: 0.8;
+	background: rgb(0 0 0 / 50%);
 }
 
 /***************** Floating dialog box ****************/
