--- a/lib/css/dock-manager-style.css
+++ b/lib/css/dock-manager-style.css
@@ -4,6 +4,7 @@
 
 .panel-titlebar {
 	background-color: #333;
+	pointer-events: auto;
 }
 
 .panel-titlebar-text {
@@ -35,6 +36,7 @@
 /***************** Floating dialog box ****************/
 .dialog-floating {
 	box-shadow: 5px 5px 20px #000;
+	pointer-events: none;
 }
 
 /************ Dragging decorator ************/
@@ -45,9 +47,11 @@
 
 /************ Resize decorator ************/
 .resize-handle {
+	pointer-events: auto;
 }
 
 .resize-handle-corner {
+	pointer-events: auto;
 }
 
 .resize-handle-e  {  }
